@@ -1,0 +1,3 @@
+chrM	13357	13651	trf	2	162.5	2	67	19	173	47	0	0	52	1.00	TA
+chrM	13436	13585	trf	7	23.9	7	66	28	61	46	0	0	53	1.00	ATTATAA
+chrM	13406	13658	trf	9	28.7	9	66	15	63	45	0	0	54	0.99	TATTATATT
