@@ -1,0 +1,31 @@
+   SW  perc perc perc  query      position in query           matching       repeat              position in  repeat
+score  div. del. ins.  sequence    begin     end    (left)    repeat         class/family         begin  end (left)   ID
+
+  210  19.5  0.0  7.2  chrM          433     515   (13279) +  T-rich         Low_complexity           2   78    (0)      1
+   28   6.1  0.0  0.0  chrM          543     591   (13203) +  AT_rich        Low_complexity           1   49    (0)      2
+   34   2.4  0.0  0.0  chrM         1345    1385   (12409) +  AT_rich        Low_complexity           1   41    (0)      3
+   26   8.2  0.0  0.0  chrM         2464    2524   (11270) +  AT_rich        Low_complexity           1   61    (0)      4
+  239  21.5  0.8  9.7  chrM         2566    2699   (11095) +  T-rich         Low_complexity           3  124    (0)      5
+   27   7.3  0.0  0.0  chrM         3922    3976    (9818) +  AT_rich        Low_complexity           1   55    (0)      6
+   37   5.7  0.0  3.3  chrM         4206    4296    (9498) +  AT_rich        Low_complexity           1   88    (0)      7
+   22   5.6  0.0  0.0  chrM         4759    4794    (9000) +  AT_rich        Low_complexity           1   36    (0)      8
+   28   2.9  0.0  0.0  chrM         5437    5471    (8323) +  AT_rich        Low_complexity           1   35    (0)      9
+  228  18.5  1.9  0.0  chrM         5538    5591    (8203) +  T-rich         Low_complexity           5   59    (0)     10
+   22   0.0  0.0  0.0  chrM         6584    6605    (7189) +  AT_rich        Low_complexity           1   22    (0)     11
+   36   9.7  0.0  0.0  chrM         6699    6811    (6983) +  AT_rich        Low_complexity           1  113    (0)     12
+   21   8.9  0.0  0.0  chrM         6978    7033    (6761) +  AT_rich        Low_complexity           1   56    (0)     13
+   26   8.8  0.0  0.0  chrM         7521    7588    (6206) +  AT_rich        Low_complexity           1   68    (0)     14
+   30   8.3  0.0  0.0  chrM         7794    7865    (5929) +  AT_rich        Low_complexity           1   72    (0)     15
+   21   0.0  0.0  0.0  chrM         8054    8074    (5720) +  AT_rich        Low_complexity           1   21    (0)     16
+   39   5.0  0.0  0.0  chrM        10561   10620    (3174) +  AT_rich        Low_complexity           1   60    (0)     17
+  207  16.8  6.6  4.7  chrM        10656   10761    (3033) +  (TTTAA)n       Simple_repeat            1  108    (0)     18
+   32   2.6  0.0  0.0  chrM        10947   10985    (2809) +  AT_rich        Low_complexity           1   39    (0)     19
+   25   0.0  0.0  0.0  chrM        11805   11829    (1965) +  AT_rich        Low_complexity           1   25    (0)     20
+   21   3.6  0.0  0.0  chrM        12027   12054    (1740) +  AT_rich        Low_complexity           1   28    (0)     21
+   24   3.2  0.0  0.0  chrM        12320   12350    (1444) +  AT_rich        Low_complexity           1   31    (0)     22
+   27   8.1  0.0  0.0  chrM        12727   12788    (1006) +  AT_rich        Low_complexity           1   62    (0)     23
+   22   9.9  0.0  0.0  chrM        12883   12953     (841) +  AT_rich        Low_complexity           1   71    (0)     24
+   60   7.2  0.0  1.9  chrM        13006   13161     (633) +  AT_rich        Low_complexity           1  153    (0)     25
+   28   9.1  0.0  0.0  chrM        13193   13269     (525) +  AT_rich        Low_complexity           1   77    (0)     26
+  468   6.9  9.4  0.0  chrM        13358   13516     (278) +  (TA)n          Simple_repeat            1  174    (0)     27
+  344   8.5  8.3  2.4  chrM        13491   13658     (136) +  (TTATA)n       Simple_repeat            2  179    (0)     28
